<resources>
    <string name="app_name" translatable="false">Purdue Menus</string>
    <string name="app_name_short" translatable="false">PU Menus</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_menu">Menu</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="late_lunch">Late Lunch</string>
    <string name="dinner">Dinner</string>

    <string name="action_settings">Settings</string>
    <string name="next_day_button_description">Next Day</string>
    <string name="previous_day_button_description">Previous Day</string>

    <string name="not_serving">Not Serving</string>
    <string name="data_unavailable">Data Unavailable</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="description_favorite_button">Favorite Icon</string>
    <string name="description_vegetarian_icon">Vegetarian Icon</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="preference_title_show_vegetarian_icons">Show Vegetarian Icons</string>
    <string name="preference_vegetarian_summary_on">Vegetarian icons are shown.</string>
    <string name="preference_vegetarian_summary_off">Vegetarian icons are not shown.</string>
    <string name="action_send_feedback">Send Feedback</string>
    <string name="title_activity_login">Purdue Sign In</string>

    <string name="pref_night_mode_off" translatable="false">mode_off</string>
    <string name="pref_night_mode_on" translatable="false">mode_on</string>
    <string name="pref_night_mode_auto" translatable="false">mode_auto</string>

    <string name="off">Off</string>
    <string name="auto">Use System Setting</string>
    <string name="on">On</string>


    <string-array name="pref_nightMode_entries">
        <item>@string/off</item>
        <item>@string/auto</item>
        <item>@string/on</item>
    </string-array>
    <string-array name="pref_nightMode_values">
        <item>@string/pref_night_mode_off</item>
        <item>@string/pref_night_mode_auto</item>
        <item>@string/pref_night_mode_on</item>
    </string-array>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_login">Sign In</string>
    <string name="network_error_message">There was an error retrieving the menu.</string>
    <string name="pref_show_serving_times">Show Serving Times</string>
    <string name="pref_log_in">Log In</string>
    <string name="pref_summary_not_logged_in">You are not currently logged in.</string>
    <string name="pref_title_show_favorite_count">Show Favorite Counts</string>
    <string name="login_details">When you are logged in, the app will attempt to keep your favorites synchronized with the Purdue favorites system.</string>
    <string name="hint_purdue_username" translatable="false">Purdue Username</string>
    <string name="changelog_title">Changelog for v%1$s</string>
    <string name="changelog" translatable="false">
        \n<b>Custom Dining Court Order</b>
        \n\nYou can now customize the order in which the dining courts are displayed. Open settings to try it out!
        \n\n<b>Favorites Support</b>
        \n\nYou can now long-press on an item to add it as a favorite.
        \n\nFavorite counts are displayed next to dining court names for quick comparison.
        \n\nYou can log in to import and synchronize your favorites with the Purdue favorites system.
        The app will attempt to keep your favorites synchronized with the Purdue
        favorites system while you are logged in.</string>
    <string name="action_clear_favorites">Clear Favorites</string>
    <string name="action_only_logout">Just Log Out</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="description_signed_in">You are signed in as %1$s</string>
    <string name="prompt_clear_local_favorites">Would you also like to clear your local favorites, or just stop synchronizing them?</string>
    <string name="title_prompt_clear_favorites">Clear Favorites?</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="desc_toggle_visibility">toggle visibility</string>
    <string name="pref_title_dark_mode">Dark Mode</string>
    <string name="no_data">No Data</string>
    <string name="pref_title_hide_closed_locations">Hide Closed Locations</string>
    <string name="key_pref_hide_closed_locations" translatable="false">hide_closed_locations</string>
    <string name="title_pref_dining_court_order">Manage Location Display Order</string>
    <string name="pref_summary_dining_court_order">Drag and drop to customize.</string>


</resources>
